# hirelense-ai

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_create_users_table.py  20260408_0002_create_candidate_profiles_table.py  20260408_0003_create_documents_table.py  20260408_0004_add_document_parsing_fields.py  20260408_0005_create_chunks_table.py  20260408_0006_add_document_indexing_fields.py  20260408_0007_create_saved_reports_table.py  20260408_0008_add_recruiter_jobs_and_candidates.py  20260408_0009_add_saved_report_recruiter_scope.py  20260408_0010_create_recruiter_profiles_table.py  20260408_0011_add_recruiter_candidate_shortlist_status.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  candidate.py  documents.py  rag.py  recruiter.py  reports.py  system.py
backend/app/core/: config.py  logging.py  runtime_checks.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  candidate_profile.py  chunk.py  document.py  recruiter.py  recruiter_profile.py  report.py  user.py
backend/app/schemas/: __init__.py  auth.py  candidate_profile.py  document.py  generation.py  recruiter.py  recruiter_dashboard.py  recruiter_profile.py  report.py  retrieval.py
backend/app/utils/: __init__.py  tokens.py
backend/chroma-scratch/: chroma.sqlite3
backend/chroma-scratch-openai/: chroma.sqlite3
backend/tests/: test_backend_pipeline.py  test_runtime_checks.py
chroma/: chroma.sqlite3
(+120 files in other folders)
